Added addStatusForUser and getUserStatuses endpoint to UserController.